--- a/app/project/0/advanced.html
+++ b/app/project/0/advanced.html
@@ -17,9 +17,9 @@
         <option value="none">None of these words</option>
       </select>
       <!-- TODO:  setup query strings based on opts-->
-      <!-- <input type="text" name="q">  -->
+      <!-- <input type="text" name="q"> -->
       <!-- onsubmit input wrap in double quotes -->
-      <!-- <input type="text" name="q" onsubmit="this.value = this.value.replace(/ /g, '+');">  -->
+      <input type="text" name="q" onsubmit="this.value = this.value.replace(/ /g, '+');">
       <input type="submit" value="Google Search">
     </form>
   </body>
