--- a/app/project/0/advanced.html
+++ b/app/project/0/advanced.html
@@ -2,25 +2,36 @@
 <html lang="en">
 <link rel="stylesheet" href="styles.css">
   <head>
-      <title>Search</title>
+    <title>Advanced</title>
+    <div>
+      <a href="index.html">
+        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google" >
+      </a>
       <div class="flex-end">
-        <a id="index" href="index.html">Google Search</a>
+        <a id="image" href="image.html">Image</a>
       </div>
+    </div>
+    <div>
+      <label class="appbar">Advanced Search</label>
+    </div>
   </head>
   <body>
-    <form action="https://www.google.com/search">
-      <label for="search">Advanced Google Search</label>
-      <select id="search" name="search">
-        <option value="all">All these words</option>
-        <option value="exact">This exact word or phrase</option>
-        <option value="any">Any of these words</option>
-        <option value="none">None of these words</option>
-      </select>
-      <!-- TODO:  setup query strings based on opts-->
-      <!-- <input type="text" name="q"> -->
-      <!-- onsubmit input wrap in double quotes -->
-      <input type="text" name="q" onsubmit="this.value = this.value.replace(/ /g, '+');">
-      <input type="submit" value="Google Search">
+    <form action="https://www.google.com/search" target="_blank" >
+      <div class="adv-form">
+        <label for="all">all these words:</label>
+        <input class="adv-txt" id="all" type="text" name="as_q" />
+        <label for="exact">this exact word or phrase:</label>
+        <input class="adv-txt" id="exact" type="text" name="as_epq" />
+        <label for="any">any of these words:</label>
+        <input class="adv-txt" id="any" type="text" name="as_oq" />
+        <label for="none">none of these words:</label>
+        <input class="adv-txt" id="none" type="text" name="as_eq" />
+        <div class="btn">
+          <input id="submit" type="submit" value="Advanced Search" />
+          <!-- onsubmit input wrap in double quotes -->
+          <!-- <input type="text" name="q" onsubmit="this.value = this.value.replace(/ /g, '+');"> -->
+        </div>
+      </div>
     </form>
   </body>
 </html>
