--- a/app/project/0/index.html
+++ b/app/project/0/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles.css">
-  <head>
-    <title>Index</title>
-    <div>
-      <a href="index.html">
-        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google" >
-      </a>
-      <div class="flex-end">
-        <a id="advanced" href="advanced.html">Advanced</a>
+    <link rel="stylesheet" href="styles.css"/>
+    <head>
+      <title>Index</title>
+      <div>
+        <div class="flex-end">
+          <a id="advanced" href="advanced.html">Advanced</a>
+        </div>
+        <div class="flex-end">
+          <a id="image" href="image.html">Image</a>
+        </div>
       </div>
-      <div class="flex-end">
-        <a id="image" href="image.html">Image</a>
+    </head>
+    <body>
+      <div class="wrapper">
+        <div class="content">
+          <canvas id="hpcanvas" width="960" height="270"></canvas>
+          <div>
+            <!-- <a href="index.html"><img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google"/></a> -->
+            <a href="index.html"><img id="logo" src="https://purepng.com/public/uploads/large/purepng.com-google-logo-2015brandlogobrand-logoiconssymbolslogosgoogle-6815229372333mqrr.png" alt="Google"/></a>
+          </div>
+          <form action="https://www.google.com/search" target="_blank">
+            <div>
+              <input class="round-search" type="text" name="q"/>
+            </div>
+            <div class="form">
+              <input id="submit" type="submit" value="Google Search"/>
+              <input id="submit" type="submit" value="I'm Feeling Lucky" name="btnI"/>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
-  </head>
-  <body>
-    <!-- <canvas id="hpcanvas" width="960" height="270"></canvas> -->
-    <form action="https://www.google.com/search" target="_blank" >
-      <div class="std-form">
-        <input type="text" name="q">
-        <input id="submit" type="submit" value="Google Search" >
-      </div>
-    </form>
-  </body>
+    </body>
 </html>
