Fix images URL regression

--- a/app/project/0/image.html
+++ b/app/project/0/image.html
@@ -22,7 +22,7 @@
           <img id="logo-index" src="https://purepng.com/public/uploads/large/purepng.com-google-logo-2015brandlogobrand-logoiconssymbolslogosgoogle-6815229372333mqrr.png" width="272" height="92" alt="Google"/>
         </a>
       </div>
-      <form action="https://www.google.com/search" target="_blank">
+      <form action="https://www.google.com/images" target="_blank">
         <div>
           <input class="round-search" type="text" name="q"/>
         </div>
