--- a/app/project/0/advanced.html
+++ b/app/project/0/advanced.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced</title>
-  </head>
-  <body>
-    <div>
-      <a href="index.html">
-        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google" >
-      </a>
-      <div class="flex-end">
-        <a id="image" href="image.html">Image</a>
-      </div>
-      <div class="flex-end">
-        <a id="index" href="index.html">Google Search</a>
-      </div>
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Advanced</title>
+</head>
+<body>
+  <div>
+    <a href="index.html">
+      <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google" >
+    </a>
+    <div class="flex-end">
+      <a id="image" href="image.html">Image</a>
     </div>
-    <div>
-      <label class="appbar">Advanced Search</label>
+    <div class="flex-end">
+      <a id="index" href="index.html">Google Search</a>
     </div>
-    <form action="https://www.google.com/search" target="_blank" >
+  </div>
+  <div style="padding: 20px;">
+    <label class="appbar">Advanced Search</label>
+  </div>
+  <div style="padding: 5px; border-bottom: 1px solid #ebebeb;"></div>
+  <div style="padding-top: 40px; padding-left: 20px; font-size: 16px; font-weight: 500; color: #333">
+    <label for="find">Find pages with...</label>
+  </div>
+  <form action="https://www.google.com/search" target="_blank" >
+    <div class="adv-form">
       <div>
-        <label for="find">Find pages with...</label>
-        <div>
-          <div class="adv-form">
-            <label for="all">all these words:</label>
-            <input class="adv-txt" id="all" type="text" name="as_q" />
-            <label for="exact">this exact word or phrase:</label>
-            <input class="adv-txt" id="exact" type="text" name="as_epq" />
-            <label for="any">any of these words:</label>
-            <input class="adv-txt" id="any" type="text" name="as_oq" />
-            <label for="none">none of these words:</label>
-            <input class="adv-txt" id="none" type="text" name="as_eq" />
-            <div class="btn">
-              <input id="submit" class="blue-btn" type="submit" value="Advanced Search" />
-              <!-- onsubmit input wrap in double quotes -->
-              <!-- <input type="text" name="q" onsubmit="this.value = this.value.replace(/ /g, '+');"> -->
-            </div>
-          </div>
-        </div>
+        <label for="all">all these words:</label>
+        <input class="adv-txt" id="all" type="text" name="as_q" />
       </div>
-    </form>
-  </body>
+      <div>
+        <label for="exact">this exact word or phrase:</label>
+        <input class="adv-txt" id="exact" type="text" name="as_epq" />
+      </div>
+      <div>
+        <label for="any">any of these words:</label>
+        <input class="adv-txt" id="any" type="text" name="as_oq" />
+      </div>
+      <div>
+        <label for="none">none of these words:</label>
+        <input class="adv-txt" id="none" type="text" name="as_eq" />
+      </div>
+    <div class="btn">
+      <input id="submit" class="blue-btn" type="submit" value="Advanced Search" />
+    </div>
+  </form>
+</body>
 </html>
