--- a/app/project/0/index.html
+++ b/app/project/0/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="wrapper">
-    <div class="content">
+    <div>
       <canvas id="hpcanvas" width="auto" height="225"></canvas>
       <div>
         <a href="index.html">
